# solana-whitelist-smartcontract

./: Anchor.toml  cli.ts  deploy.sh  package-lock.json  package.json  whitelist_idl.ts  whitelist_state.json
programs/whitelist/: Cargo.toml
programs/whitelist/src/: lib.rs
tests/: whitelist.js
